--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/joi": "^17.2.3",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-basic-auth": "^1.2.1",
