--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
@@ -37,17 +39,21 @@
     "express-basic-auth": "^1.2.1",
     "helmet": "^7.0.0",
     "http": "^0.0.1-security",
+    "http-status-codes": "^2.2.0",
     "https": "^1.0.0",
     "ioredis": "^5.3.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.30",
     "nest-winston": "^1.9.2",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
     "proxymise": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.16",
     "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^9.0.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
